{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 50,
  "lineage": "48ce280a-3ae1-0e5f-6f23-167b586592a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-0e14adb2fadfe8153",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e14adb2fadfe8153",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-076f03effc671db42",
            "private_dns": "ip-172-31-30-171.eu-west-2.compute.internal",
            "private_ip": "172.31.30.171",
            "public_dns": "ec2-18-170-74-134.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.74.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0647d27eb6c1fed45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-Jenkins",
              "allow-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073360c0f9855659e",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066c51d707835f05a",
              "sg-0ac923e1556b4437c"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-Jenkins",
            "aws_security_group.allow-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "K8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-08b7be8770d482fae",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b7be8770d482fae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3dee786851dcbc8",
            "private_dns": "ip-172-31-28-91.eu-west-2.compute.internal",
            "private_ip": "172.31.28.91",
            "public_dns": "ec2-13-40-19-185.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.19.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd4d655c40c2ef1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073360c0f9855659e",
            "tags": {
              "Name": "K8"
            },
            "tags_all": {
              "Name": "K8"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066c51d707835f05a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SwarmManager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-01f639c3eb8953943",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f639c3eb8953943",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0767e5f733ca71b7a",
            "private_dns": "ip-172-31-17-150.eu-west-2.compute.internal",
            "private_ip": "172.31.17.150",
            "public_dns": "ec2-35-178-40-25.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.40.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d55b07ab7186cfd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073360c0f9855659e",
            "tags": {
              "Name": "SwarmManager"
            },
            "tags_all": {
              "Name": "SwarmManager"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066c51d707835f05a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SwarmWorker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-04c8574968d8279b5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c8574968d8279b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b67cf8ff0d2333a3",
            "private_dns": "ip-172-31-17-23.eu-west-2.compute.internal",
            "private_ip": "172.31.17.23",
            "public_dns": "ec2-35-177-247-21.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.247.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06179783e9fac09f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073360c0f9855659e",
            "tags": {
              "Name": "SwarmWorker"
            },
            "tags_all": {
              "Name": "SwarmWorker"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066c51d707835f05a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:security-group/sg-0ac923e1556b4437c",
            "description": "Allow Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac923e1556b4437c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connect to Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-Jenkins",
            "name_prefix": "",
            "owner_id": "772575786712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-Jenkins"
            },
            "tags_all": {
              "Name": "allow-Jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-095792a94541a5139"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:security-group/sg-066c51d707835f05a",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066c51d707835f05a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "772575786712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-095792a94541a5139"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}